Attempt to prevent title text overlapping with the header image (though second line sits behind the menu...)

--- a/i2p2www/static/styles/duck.css
+++ b/i2p2www/static/styles/duck.css
@@ -22,6 +22,7 @@ div#branding {width:80%; /*margin:1em auto;*/ margin: 1em auto 0; position:relat
         font-family:"URW Gothic L", "Century Gothic", sans-serif; text-transform:uppercase; font-size:3.5em; 
         font-weight:bold; text-shadow:1px 1px 1px rgba(0,0,0,.2); color:#333333;
         position:absolute; top:0; right:0; line-height:41px; vertical-align:middle;
+        max-width: 70%; text-align: right;
     }
 
 div.navigation {position:relative;}
